--- a/AgentsMovingVis/AgentsMovingVis.csproj
+++ b/AgentsMovingVis/AgentsMovingVis.csproj
@@ -42,6 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Agent.cs" />
+    <Compile Include="Area.cs" />
     <Compile Include="FloatPoint.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Iteration.cs" />
