size_t replaced by long long type. Phantoms copying algorthms shortened

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ AgentsMovingVis/*.txt
 AgentsMovingVis/packages.config
 packages/
 
+ParallelMPISF/My Inspector XE Results*
+ParallelMPISF/IDebug/
+ParallelMPISF/Debug_PG/
+ParallelMPISF/Debug/
+ParallelMPISF/x64/
